fix mobile navbar overlap?

--- a/src/pages/home.css
+++ b/src/pages/home.css
@@ -4,7 +4,7 @@
 .home-root {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   overflow: hidden;
 }
