--- a/src/shared.css
+++ b/src/shared.css
@@ -46,6 +46,15 @@
   box-sizing: border-box;
 }
 
+#root {
+  overflow-x: hidden;
+  overflow-y: hidden;
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 100%;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
   background: var(--body-background-color);
@@ -54,8 +63,8 @@ body {
   overflow-y: hidden;
   padding: 0;
   margin: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
 }
 
 h3 {
@@ -66,6 +75,10 @@ h3 {
 html {
   overflow-x: hidden;
   overflow-y: hidden;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
 h4 {
